// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckBox renders when checked 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "minHeight": 36,
      "opacity": 1,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderColor": "#B3261E",
          "borderRadius": 4,
          "borderWidth": 1,
          "height": 22,
          "justifyContent": "center",
          "marginRight": 8,
          "width": 22,
        },
        {
          "backgroundColor": "#B3261E",
        },
      ]
    }
  >
    <Text
      style={
        {
          "color": "#FFFFFF",
          "fontWeight": "900",
        }
      }
    >
      ✓
    </Text>
  </View>
  <Text
    style={
      {
        "color": "#17120D",
        "fontWeight": "700",
      }
    }
  >
    foo
  </Text>
</View>
`;

exports[`CheckBox renders when un-checked 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "minHeight": 36,
      "opacity": 1,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderColor": "#B3261E",
          "borderRadius": 4,
          "borderWidth": 1,
          "height": 22,
          "justifyContent": "center",
          "marginRight": 8,
          "width": 22,
        },
        false,
      ]
    }
  />
  <Text
    style={
      {
        "color": "#17120D",
        "fontWeight": "700",
      }
    }
  >
    foo
  </Text>
</View>
`;
